--- a/src/Pages/ManageInventories/ManageInventories.css
+++ b/src/Pages/ManageInventories/ManageInventories.css
@@ -1,25 +1,22 @@
-.product-container{
+.all-product-container{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-
 }
-
-
 
 @media only screen and (max-width:576px){
-    .product-container{
-        grid-template-columns: repeat(1, 1fr);
+    .all-product-container{
+        grid-template-columns: repeat(1 ,1fr)
+
     }
 }
+
 @media only screen and (min-width:577px) and (max-width:992px){
-    .product-container{
-        grid-template-columns: repeat(2, 1fr);
+    .all-product-container{
+        grid-template-columns: repeat(2, 1fr)
     }
 }
-
 @media only screen and (min-width:993px) and (max-width:1400px){
-    .product-container{
-        grid-template-columns: repeat(3, 1fr);
+    .all-product-container{
+        grid-template-columns: repeat(3, 1fr)
     }
 }
-
