--- a/src/Pages/Login/SignUp/SignUp.css
+++ b/src/Pages/Login/SignUp/SignUp.css
@@ -1,29 +1,18 @@
-.signup{
-    display:grid;
-    grid-template-columns: repeat(2, 1fr);
-    
-}
-.body{
-    background-color: #c7e7dc
 
-}
-.signIn-img{
-    margin-left: 12px;
+
+.body{
+    background-color: rgba(201, 230, 237, 0.425)
 }
 @media only screen and (max-width:576px) {
 
-    .signup{
-        grid-template-columns: repeat(1, 1fr)
-    }
-    .signIn-img{
+   
+    .signup-img{
         display:none;
     }
 }
     @media only screen and (min-width:577px)and (max-width:992px){
-        .signup{
-            grid-template-columns: repeat(1, 1fr)
-        }
-        .signIn-img{
+        
+        .signup-img{
             display:none;
         }
         
